--- a/src/Home2.css
+++ b/src/Home2.css
@@ -1,5 +1,13 @@
+.home-container {
+  width: 1200px;
+}
+
+.page-title {
+  margin-left: 20px;
+}
+
 .header-band {
-  width: 100%;
+  width: 1200px;
   display: flex;
   align-items: center;
 }
@@ -23,8 +31,8 @@
 }
 
 .post {
-  width: 100%;
-  padding: 0.5em 1em;
+  width: 50%;
+  padding: 0.5em 0.5em;
   font-weight: bold;
   background: #fff;
 }
