--- a/src/Signup.css
+++ b/src/Signup.css
@@ -1,5 +1,5 @@
 /* 全体のスタイル */
-.body {
+.sign-up-page {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 1200px;
   height: 100vh;
   box-sizing: border-box; /* パディングやボーダーを含めたサイズ管理 */
 }
@@ -56,7 +57,8 @@
 
 /* サインアップボタン */
 .signup-container button {
-  background-color: #28a745;
+  width: 80%;
+  background-color: #27b28f;
   color: white;
   border: none;
   cursor: pointer;
@@ -64,7 +66,7 @@
 }
 
 .signup-container button:hover {
-  background-color: #218838;
+  background-color: #9cdaca;
 }
 
 .back {
